devscripts (2.10.8) UNRELEASED; urgency=low

  [ Mohammed Adnène Trojette ]
  * debcommit: allow an alternate location for the changelog. By default
    debian/changelog is used. Thanks Sjoerd Simons for the patch.
    (Closes: #437387)

  [ Stefano Zacchiroli ]
  * debcheckout: new script to checkout the version control system repository
    of a package

 -- Stefano Zacchiroli <zack@debian.org>  Wed, 15 Aug 2007 15:30:31 +0200

devscripts (2.10.7) unstable; urgency=low

  [ Adam D. Barratt ]
  * debian/control: Add libsoap-lite-perl to the Suggests and
    description for bts
  * README
    + Add libcrypt-ssleay-perl to the description for uscan
    + Add libsoap-lite-perl to the description for bts
    + Mention the SOAP interface in the description for bts
  * debchange: Fix NMU versioning for Debian native packages
  * dd-list: Sort developer names case-insensitively. Thanks to Steinar H.
    Gunderson for the suggestion
  * bts
    + Fix test for libwww-perl not being installed
    + Only pass -c to mail(1) if there are Cc: addresses
      (Closes: #433385)
    + Add support for selecting bug lists via the SOAP interface. This
      requires libsoap-lite-perl. Thanks to Don Armstrong for the patch
      (Closes: #433169)
  * deb-reversion: Apply patch from Adeodato Simó to ensure -v is
    honoured (Closes: #433492)
  * debcommit: When using git, allow either all files or only those in
    the index to be committed. Thanks to Martin F Krafft and Junichi
    Uekawa for the patch. (Closes: #402539, #427429, #433081)
  * uscan
    + Allow a user agent string to be specified (Closes: #433419)
    + Fix https support (Closes: #423669)
    + Correctly set exit status after downloading (Closes: #431840)
  * licensecheck
    + Allow directories to be passed as arguments
    + Allow a pattern to be specified indicating files / directories
      which should be excluded from checking. The default is the same
      as dpkg-source's -i option